\mathcal{L}_{SSE} fixing

--- a/book/math_foundations/linear_regression/gradient.ipynb
+++ b/book/math_foundations/linear_regression/gradient.ipynb
@@ -160,7 +160,7 @@
     "In het geval van een model met enkel een intercept ($\\pmb{b} = [b_1]^T$) krijgen we:\n",
     "\n",
     "$$\n",
-    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\frac{\\partial SSE}{\\partial b_1} = 2\\sum_{i=1}^M(y_i-b_1)\n",
+    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_1} = 2\\sum_{i=1}^M(y_i-b_1)\n",
     "$$\n",
     "\n",
     "Wanneer we de ideale waarde voor $b_1$ willen vinden, kunnen we deze afgeleide gelijk stellen aan $0$ ($\\to$ horizontale tangentlijn):\n",
@@ -190,14 +190,14 @@
     "In het geval van $\\pmb{b} = [b_1, b_2]^T$ neemt de $SSE$ de vorm aan van een oppervlakte (zoals reeds geïllustreerd bij de grid search en monte carlo sampling). We drukken de afgeleide dan ook uit in twee dimensies:\n",
     "\n",
     "$$\n",
-    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\nabla{SSE} = \\begin{bmatrix}\n",
-    "\\frac{\\partial SSE}{\\partial b_1} \\cr\n",
-    "\\frac{\\partial SSE}{\\partial b_2}\n",
+    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\nabla{\\mathcal{L}_{SSE}} = \\begin{bmatrix}\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_1} \\cr\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_2}\n",
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
     "(target-partial-derivative)=\n",
-    "De elementen $\\frac{\\partial SSE}{\\partial b_1}$ en $\\frac{\\partial SSE}{\\partial b_2}$ worden de **partiële afgeleiden** van de $SSE$ functie genoemd. Samen vormen ze de **gradiënt** van de $SSE$ functie $\\nabla{SSE}$. **De gradiënt verbreedt met andere woorden het concept van de _afgeleide_ naar het geval van meerdere onbekenden.**\n",
+    "De elementen $\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_1}$ en $\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_2}$ worden de **partiële afgeleiden** van de $SSE$ functie genoemd. Samen vormen ze de **gradiënt** van de $SSE$ functie $\\nabla{\\mathcal{L}_{SSE}}$. **De gradiënt verbreedt met andere woorden het concept van de _afgeleide_ naar het geval van meerdere onbekenden.**\n",
     "\n",
     "Om een ideale oplossing voor $[b_1, b_2]^T$ te vinden, kunnen we dus de $SSE$ gradiënt gelijk stellen aan $\\pmb{0}$:\n",
     "\n",
