--- a/book/math_foundations/linear_regression/multiple.ipynb
+++ b/book/math_foundations/linear_regression/multiple.ipynb
@@ -312,24 +312,24 @@
     "De algemene regel voor het stapsgewijze updaten van parameterschattingen blijft ook hier:\n",
     "\n",
     "$$\n",
-    "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k)\n",
+    "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla \\mathcal{L}(\\pmb{b}^k)\n",
     "$$\n",
     "\n",
     "Nog steeds gebruikmakend van de _SSE loss_, moeten we nu op zoek naar de gradiënt:\n",
     "\n",
     "$$\n",
-    "\\nabla{SSE} = \\begin{bmatrix}\n",
-    "\\frac{\\partial SSE}{\\partial {b_1}^k} \\cr\n",
-    "\\frac{\\partial SSE}{\\partial {b_2}^k} \\cr\n",
-    "\\frac{\\partial SSE}{\\partial {b_3}^k} \\cr\n",
-    "\\frac{\\partial SSE}{\\partial {b_4}^k}\n",
+    "\\nabla{\\mathcal{L}_{SSE}} = \\begin{bmatrix}\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial {b_1}^k} \\cr\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial {b_2}^k} \\cr\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial {b_3}^k} \\cr\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial {b_4}^k}\n",
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
     "In de sectie over de _SSE gradient_ zagen we dat in het algemene geval van $N$ features, de gradiënt volgende vorm heeft:\n",
     "\n",
     "$$\n",
-    "\\nabla{SSE} = \\begin{bmatrix}\n",
+    "\\nabla{\\mathcal{L}_{SSE}} = \\begin{bmatrix}\n",
     "-2\\sum_{i=1}^M(y_i - \\sum_{j=1}^Nx_{ij}b_j)(x_{i,1}) \\cr\n",
     "-2\\sum_{i=1}^M(y_i - \\sum_{j=1}^Nx_{ij}b_j)(x_{i,2}) \\cr\n",
     "\\vdots \\cr\n",
@@ -340,7 +340,7 @@
     "In matrix notatie kunnen we dit efficiënt reduceren tot:\n",
     "\n",
     "$$\n",
-    "\\nabla{SSE} = -2\\pmb{X}^T(\\pmb{y} - \\pmb{\\hat{y}})\n",
+    "\\nabla{\\mathcal{L}_{SSE}} = -2\\pmb{X}^T(\\pmb{y} - \\pmb{\\hat{y}})\n",
     "$$\n",
     "\n",
     "Dit kunnen we als volgt implementeren."
