--- a/book/math_foundations/linear_regression/grid.ipynb
+++ b/book/math_foundations/linear_regression/grid.ipynb
@@ -280,7 +280,7 @@
                 ":::{note} _Squared_ $L^2$ _loss_\n",
                 ":class: dropdown\n",
                 "\n",
-                "Merk op dat we de SSE _loss_ kunnen schrijven als:\n",
+                "Merk op dat we de $SSE$ _loss_ kunnen schrijven als:\n",
                 "\n",
                 "$$\n",
                 "\\begin{align}\n",
@@ -302,7 +302,24 @@
                 "Terugkijkend naar de definitie van de Euclidische norm ($L^2$; $||\\pmb{a}||_2 = \\sqrt{\\pmb{a}^T\\pmb{a}}$), volgt dat de $SSE$ _loss_ overeenkomt met het _kwadraat_ van de $L^2$ norm van de vector van verschillen $\\pmb{d}$ tussen geobserveerde waarden $\\pmb{y}$ en geschatte waarden $\\hat{\\pmb{y}}$. \n",
                 ":::\n",
                 "\n",
-                "**De bedoeling van het _leeralgoritme_ is dus om op zoek te gaan naar waarden voor de model parameters $\\pmb{b}$ die de $SSE$ _loss_ _minimaliseren_**.\n",
+                ":::{important} _Mean Squared Error ($MSE$) loss_  \n",
+                "(target-mse)=\n",
+                "In de praktijk wordt vaak met het gemiddelde van de gekwadrateerde verschillen gewerkt, de zogeheten _Mean Squared Error ($MSE$) loss_:\n",
+                "\n",
+                "$$\n",
+                "\\mathcal{L}_{MSE}(f(\\pmb{x}); \\pmb{y}) = \\frac{\\sum_{i=1}^M(y_i-f(x_i))^2}{M}\n",
+                "$$\n",
+                "\n",
+                "of \n",
+                "\n",
+                "$$\n",
+                "\\mathcal{L}_{MSE}(f(\\pmb{x}); \\pmb{y}) = \\frac{\\mathcal{L}_{SSE}}{M}\n",
+                "$$\n",
+                "\n",
+                "$\\mathcal{L}_{MSE}$ is dus identiek aan $\\mathcal{L}_{SSE}$, op de factor $\\frac{1}{M}$ na. Bij de wiskundige uiteenzettingen gebruiken we $\\mathcal{L}_{SSE}$ omwille van eenvoud in notatie. In de praktijk verkiezen we $\\mathcal{L}_{MSE}$ wegens het risico op _overflow error_ bij $\\mathcal{L}_{SSE}$.\n",
+                ":::\n",
+                "\n",
+                "**De bedoeling van het _leeralgoritme_ is dus om op zoek te gaan naar waarden voor de model parameters $\\pmb{b}$ die $\\mathcal{L}_{SSE}$ _minimaliseren_**.\n",
                 "\n",
                 "[^ml_principles]: Zoals gezien in de cursus _ML Principles_"
             ]
