--- a/book/math_foundations/labs/linalg.ipynb
+++ b/book/math_foundations/labs/linalg.ipynb
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c1592ee2",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "id": "1f1ac936",
    "metadata": {},
    "outputs": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "id": "fde15f79",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "id": "0693e144",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "id": "468983ec",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1048,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[72], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[33], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mValueError\u001b[0m: shapes (4,) and (3,) not aligned: 4 (dim 0) != 3 (dim 0)"
      ]
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "06df8dfc",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1094,7 @@
       " [1 4 7 5]\n",
       " [9 2 8 3]]\n",
       "b: [4 2 8 1]\n",
-      "a'b: [ 41  73 107]\n"
+      "Ab: [ 41  73 107]\n"
      ]
     }
    ],
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "764d0d73",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1119,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[74], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Mind the order!\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[35], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Mind the order!\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbA: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mValueError\u001b[0m: shapes (4,) and (3,4) not aligned: 4 (dim 0) != 3 (dim 0)"
      ]
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "16a856bd",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1166,7 @@
       " [3.9 3.7]\n",
       " [7.9 8.2]]\n",
       "b: [3.  2.2]\n",
-      "A'b: [26.44 12.46 22.56 19.84 41.74]\n"
+      "Ab: [26.44 12.46 22.56 19.84 41.74]\n"
      ]
     }
    ],
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 37,
    "id": "03711eaf",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 38,
    "id": "61b62306",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1254,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[77], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Mind the order!\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBA: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mB\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[38], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Mind the order!\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBA: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mB\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mValueError\u001b[0m: shapes (4,2) and (3,4) not aligned: 2 (dim 1) != 3 (dim 0)"
      ]
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 39,
    "id": "0f7482ee",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 40,
    "id": "37ff8ba9",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 41,
    "id": "fe3cd56c",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "id": "eeb23a00",
    "metadata": {},
    "outputs": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "id": "e5443957",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1416,7 @@
        "       [0. , 0. , 0. , 5.4]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "id": "d3bafe2c",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1455,7 @@
        "       [0., 0., 0., ..., 0., 0., 1.]], shape=(67, 67))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "0ad3f6e9",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1496,7 @@
        "       [0, 0, 0, 3]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 46,
    "id": "bf9edacf",
    "metadata": {},
    "outputs": [
@@ -1522,7 +1522,7 @@
        "       [9, 2, 8, 3]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 47,
    "id": "e365ea0f",
    "metadata": {},
    "outputs": [
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "4a8bfd71",
    "metadata": {},
    "outputs": [],
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 49,
    "id": "7459ac0e",
    "metadata": {},
    "outputs": [
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 50,
    "id": "448d1e41",
    "metadata": {},
    "outputs": [
@@ -1732,7 +1732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
