Add mind map image and update project structure in myst.yml
- Added a new mind map image for the math foundations section.
- Updated myst.yml to include the new mmap.md file in the project structure.

--- a/book/math_foundations/labs/backprop.ipynb
+++ b/book/math_foundations/labs/backprop.ipynb
@@ -5,7 +5,7 @@
    "id": "5e883457",
    "metadata": {},
    "source": [
-    "# Feedforward neuraal netwerk met _back propagation_\n",
+    "# _Back propagation_\n",
     "\n",
     "## Leerdoelen\n",
     "- Feedforward neural network implementeren met PyTorch\n",
