--- a/book/math_foundations/labs/glm.ipynb
+++ b/book/math_foundations/labs/glm.ipynb
@@ -5,7 +5,7 @@
    "id": "9ec38e0d",
    "metadata": {},
    "source": [
-    "# Logistische regressie met _gradient descent_\n",
+    "# Logistische regressie\n",
     "\n",
     "In deze lab-sessie passen we logistische regressie met gradient descent toe op de **Iris dataset**. We bouwen een binaire classifier die onderscheid maakt tussen twee soorten irissen op basis van hun bloemeigenschappen.\n",
     "\n",
