--- a/book/math_foundations/linear_regression/grid.ipynb
+++ b/book/math_foundations/linear_regression/grid.ipynb
@@ -303,6 +303,8 @@
                 ":::\n",
                 "\n",
                 ":::{important} _Mean Squared Error ($MSE$) loss_  \n",
+                ":class: dropdown\n",
+                "\n",
                 "(target-mse)=\n",
                 "In de praktijk wordt vaak met het gemiddelde van de gekwadrateerde verschillen gewerkt, de zogeheten _Mean Squared Error ($MSE$) loss_:\n",
                 "\n",
