Update lecturer information for Kevin Diependaele and refine content in GLM, backpropagation, and perceptron notebooks
- Removed image link for Kevin Diependaele and updated his professional background.
- Corrected text in GLM notebook for clarity and accuracy regarding binary target variables.
- Improved phrasing in backpropagation notebook for better readability and consistency.
- Adjusted text in perceptron notebook to enhance clarity and corrected terminology.
- Updated visual elements in math foundations mind map, including text changes from "Logistische regressie" to "Logistic regression".

--- a/book/math_foundations/nn/backprop.ipynb
+++ b/book/math_foundations/nn/backprop.ipynb
@@ -387,7 +387,7 @@
     "### Stap 1\n",
     "Eens de _forward pass_ is uitgevoerd, kunnen we de predictiefout aan de hand van de gekozen _loss_ functie uitdrukken. Voor deze uiteenzetting kiezen we voor de _squared error_ $\\mathcal{L}_{SE} = \\frac{1}{2}(y-\\hat{y})^2$. Merk op dat:\n",
     "- we het subscript $i$ achterwege laten\n",
-    "- we geen _sum of squared errors_ gebruiken (zoals eerder bij het lineaire regressiemodel) om dat het hier maar over één input gaat.\n",
+    "- we geen _sum of squared errors_ gebruiken (zoals eerder bij het lineaire regressiemodel) omdat het hier maar over één input gaat.\n",
     "- we de term $\\frac{1}{2}$ toevoegen omdat we hiermee de exponent wegwerken bij het berekenen van de gradiënt.  \n",
     "We werken ook met de veronderstelling van een logistische activatiefunctie.\n",
     "\n",
@@ -397,9 +397,9 @@
     "  \n",
     "We willen opnieuw via _gradient descent_, stap voor stap de gewichten updaten aan de hand van de partiële afgeleiden (gradiënt) van de _loss_ functie. De individuele partiële afgeleiden geven ons telkens de richting aan waarin we een bepaald gewicht (of parameter) moeten verschuiven om de grootste daling in de _loss_ te bekomen - rekening houdend met een bepaalde stapgrootte (_learning rate_) en bij het constant houden van alle andere gewichten (of parameters).  \n",
     "  \n",
-    "Het berekenen van de gradiënt gebeurt, gezien de (variabele) netwerkstructuur op een speciale manier waarbij er **sequentieel gewerkt wordt, beginnend bij de output en eindigend bij de input** (van rechts naar links in bovenstaande illustratie). Deze beweging wordt de **_backward pass_** genoemd.  \n",
+    "Het berekenen van de gradiënt gebeurt, gezien de (variabele) netwerkstructuur, op een speciale manier waarbij er **sequentieel gewerkt wordt, beginnend bij de output en eindigend bij de input** (van rechts naar links in bovenstaande illustratie). Deze beweging wordt de **_backward pass_** genoemd.  \n",
     "  \n",
-    "Doordat de output van het netwerk tot stand komt op basis van een reeks _geneste_ functies, speelt de _{ref}`ketting regel <target-chain-rule>`_ hierin een centrale rol. \n",
+    "Doordat de output van het netwerk tot stand komt op basis van een reeks _geneste_ functies, speelt de _{ref}`kettingregel <target-chain-rule>`_ hierin een centrale rol. \n",
     "  \n",
     "### Stap 2\n",
     "Nadat we in de eerste stap de _loss_ bepaald hebben, beginnen we rechts, bij de eerste gewichten die we tegenkomen vóór de output: ${w_1}$, ${w_2}$ en ${w_3}$ in bovenstaande illustratie.  \n",
@@ -437,7 +437,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Voor de partiële afgeleide van de _loss_ functie met betrekking tot het _bias_ gewicht $w_1$ krijgen we via de ketting regel:\n",
+    "Voor de partiële afgeleide van de _loss_ functie met betrekking tot het _bias_ gewicht $w_1$ krijgen we via de _{ref}`kettingregel <target-chain-rule>`_:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\mathcal{L}_{SE}}{\\partial w_1} = \\frac{\\partial}{\\partial w_1}f(g(\\phi(h(w_1)))) = \\frac{\\partial \\mathcal{L}_{SE}}{\\partial f}\\frac{\\partial g}{\\partial \\phi}\\frac{\\partial \\phi}{\\partial h}\\frac{\\partial h}{\\partial w_1}\n",
@@ -476,7 +476,7 @@
     "$$\n",
     "\n",
     "### Stap 3\n",
-    "Als we nu naar de gewichten op het voorgaande niveau gaan kijken, kunnen we de ketting van partiële afgeleiden simpelweg verlengen. Laten we kijken naar gewicht $w_{2,1}$ dat verbonden is met input $x_2$ en de eerste hidden neuron.\n",
+    "Als we nu naar de gewichten op het voorgaande niveau gaan kijken, kunnen we de ketting van partiële afgeleiden simpelweg verlengen. Laten we kijken naar gewicht $w_{2,1}$ dat verbonden is met input $x_2$ en het eerste hidden neuron.\n",
     "\n",
     "We moeten de _loss_ nu uitdrukken als een functie van $w_{2,1}$:\n",
     "\n",
@@ -542,7 +542,7 @@
     "\\frac{\\partial \\mathcal{L}_{SE}}{\\partial w^{(1)}_{2,1}} = (y - \\hat{y})(-1)\\phi(z)(1 - \\phi(z)) \\cdot w_2 \\cdot \\phi(z_1)(1 - \\phi(z_1)) \\cdot x_2\n",
     "$$\n",
     "\n",
-    "Op analoge wijze kunnen we de partiële afgeleiden voor alle andere gewichten in de input laag berekenen. Voor bijvoorbeeld $w_{3,2}$ (verbonden met input $x_3$ en de tweede hidden neuron) krijgen we:\n",
+    "Op analoge wijze kunnen we de partiële afgeleiden voor alle andere gewichten in de inputlaag berekenen. Voor bijvoorbeeld $w_{3,2}$ (verbonden met input $x_3$ en de tweede hidden neuron) krijgen we:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\mathcal{L}_{SE}}{\\partial w_{3,2}} = (y - \\hat{y})(-1)\\phi(z)(1 - \\phi(z)) \\cdot w_3 \\cdot \\phi(z_2)(1 - \\phi(z_2)) \\cdot x_3\n",
@@ -556,7 +556,7 @@
     "\\pmb{w}^{k+1} = \\pmb{w}^k - \\lambda \\nabla \\mathcal{L}(\\pmb{w}^k) \n",
     "$$\n",
     "  \n",
-    "Merk op dat bovenstaande uiteenzetting specifiek geldt voor de geïllustreerde architectuur met logistische activatie en $\\mathcal{L}_{SE}$. Het algoritme kan echter in principe om met een arbitraire architectuur en afleidbare activatiefuncties. Zo zal bij _diepere_ netwerken (meer hidden layers) ook de som-regel zijn intrede doen wanneer er van bij een bepaald gewicht meerdere paden richting de output lopen. "
+    "Merk op dat bovenstaande uiteenzetting specifiek geldt voor de geïllustreerde architectuur met logistische activatie en $\\mathcal{L}_{SE}$. Het algoritme kan echter in principe omgaan met een arbitraire architectuur en afleidbare activatiefuncties. Zo zal bij _diepere_ netwerken (meer hidden layers) ook de somregel zijn intrede doen wanneer er vanaf een bepaald gewicht meerdere paden richting de output lopen."
    ]
   },
   {
