--- a/book/math_foundations/nn/perceptron.ipynb
+++ b/book/math_foundations/nn/perceptron.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# _Perceptron_\n",
     "\n",
-    "Tot nu toe hebben we het gehad over het lineaire regressiemodel en de verschillende manieren om de parameters te schatten. We hebben ook gezien hoe het {ref}`logistische regressiemodel <target-logistic-regression>` een uitbreiding is voor binaire klassificatie, waarbij een sigmoide (S-vormige) functie (de _link functie_) lineaire predicties vertaalt naar het interval $[0, 1]$. Het logistische regressiemodel is een specifiek geval van een _{ref}`generalized linear model <target-glm>`_. \n",
+    "Tot nu toe hebben we het gehad over het lineaire regressiemodel en de verschillende manieren om de parameters te schatten. We hebben ook gezien hoe het {ref}`logistische regressiemodel <target-logistic-regression>` een uitbreiding is voor binaire klassificatie, waarbij een sigmoïde (S-vormige) functie (de _link functie_) lineaire predicties vertaalt naar het interval $[0, 1]$. Het logistische regressiemodel is een specifiek geval van een _{ref}`generalized linear model <target-glm>`_. \n",
     "\n",
-    "In deze sectie introduceren het **perceptron**, de bouwsteen van neurale netwerken. Een perceptron is conceptueel zeer verwant aan _generalized linear models_. Het belangrijkste verschil zit in de terminologie: wat we bij GLMs een _link functie_ noemen, wordt in de context van neurale netwerken een _activatiefunctie_ genoemd.\n",
+    "In deze sectie introduceren we het **perceptron**, de bouwsteen van neurale netwerken. Een perceptron is conceptueel zeer verwant aan _generalized linear models_. Het belangrijkste verschil zit in de terminologie: wat we bij GLMs een _link functie_ noemen, wordt in de context van neurale netwerken een _activatiefunctie_ genoemd.\n",
     "\n",
     "(target-perceptron)=\n",
     "**Een perceptron is in feite een kunstmatig neuron dat de werking van een biologisch neuron nabootst**:\n",
@@ -308,7 +308,7 @@
    "source": [
     "## Activatiefuncties\n",
     "(target-activation)=\n",
-    "De **activatiefunctie** $\\phi(z)$ is cruciaal voor de werking van een perceptron. Ze **vertaalt de lineaire combinatie van inputs en gewichten naar een output via een S-vormige (_sigmoid_) transformatie**. Er bestaan verschillende varianten met verschillende eigenschappen. Hieronder bekijken ze de meest gebruikelijke:\n",
+    "De **activatiefunctie** $\\phi(z)$ is cruciaal voor de werking van een perceptron. Ze **vertaalt de lineaire combinatie van inputs en gewichten naar een output via een S-vormige (_sigmoid_) transformatie**. Er bestaan verschillende varianten met verschillende eigenschappen. Hieronder bekijken we de meest gebruikelijke:\n",
     "\n",
     "### 1. Logistische\n",
     "De logistische functie die we al kennen van het logistische regressiemodel:\n",
