--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# _Generalized linear models_\n",
     "(target-glm)=\n",
-    "Stel dat we te maken hebben met een target variabele die in plaats van een continue waarde (bv. hoeveelheid fooi), _binair_ is (bv. laat iemand een tip achter $[1]$ of niet $[1]$). In een dergelijke situatie zouden we nog steeds predicties willen kunnen maken op basis van een lineaire combinatie van features/predictoren, maar we kunnen een standaard lineair regressie model niet zomaar toepassen. Dat model houdt enkel rekening met continue targetvariabele, dus met predicties die groter dan $1$ of kleiner dan $0$. Een oplossing hiervoor is om het lineaire model via een speciale niet-lineaire functie te _linken_ aan de target waarden ($0$ of $1$ in het binaire geval). Om predicties te mappen op binaire outputs wordt een _sigmoid_ (S-vormige) functie gebruikt zoals de logistische functie. In dit laatste geval spreken we over **logistische regressie**. In het algemene geval waarbij we **lineaire predicties mappen op niet-continue targetvariabelen via een welbepaalde link-functie spreekt men van _generalized linear models_ (GLM)**. Hier gaan we enkel verder in op _logistische regressie_ omdat het een aanzet geeft naar de parameter schattingen bij neurale netwerken.\n",
+    "Stel dat we te maken hebben met een target variabele die in plaats van een continue waarde (bv. hoeveelheid fooi), _binair_ is (bv. laat iemand een tip achter $[1]$ of niet $[0]$). In een dergelijke situatie zouden we nog steeds predicties willen kunnen maken op basis van een lineaire combinatie van features/predictoren, maar we kunnen een standaard lineair regressie model niet zomaar toepassen. Dat model houdt enkel rekening met continue targetvariabele, dus met predicties die groter dan $1$ of kleiner dan $0$. Een oplossing hiervoor is om het lineaire model via een speciale niet-lineaire functie te _linken_ aan de target waarden ($0$ of $1$ in het binaire geval). Om predicties te mappen op binaire outputs wordt een _sigmoid_ (S-vormige) functie gebruikt zoals de logistische functie. In dit laatste geval spreken we over **logistische regressie**. In het algemene geval waarbij we **lineaire predicties mappen op niet-continue targetvariabelen via een welbepaalde link-functie spreekt men van _generalized linear models_ (GLM)**. Hier gaan we enkel verder in op _logistische regressie_ omdat het een aanzet geeft naar de parameter schattingen bij neurale netwerken.\n",
     "\n",
     "(target-logistic-regression)=\n",
     "## Logistische regressie\n",
@@ -15,7 +15,7 @@
     "Bij logistische regressie hebben te maken met **binaire target variabelen**:\n",
     "\n",
     "$$\n",
-    "y_i \\isin [0, 1]\n",
+    "y_i \\isin \\{0, 1\\}\n",
     "$$\n",
     "\n",
     "De lineaire predicties worden in het interval $[0, 1]$ geprojecteerd door de logistische link functie.\n"
@@ -154,7 +154,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Zoals te zien in de illustratie hierboven, zorgt de logistische link-functie ervoor dat de voorspellingen _binnen_ het interval $[0, 1]$. Om de voorspellingen echt binair te maken $\\{0, 1\\}$ wordt een _decision boundary_ gebruikt - meestal bij het flexiepunt:\n",
+    "Zoals te zien in de illustratie hierboven, zorgt de logistische link-functie ervoor dat de voorspellingen _binnen_ het interval $[0, 1]$ vallen. Om de voorspellingen echt binair te maken $\\{0, 1\\}$ wordt een _decision boundary_ gebruikt - meestal bij het flexiepunt:\n",
     "\n",
     "$$\n",
     "\\hat{y}_i = \\begin{cases}\n",
