Refactor code structure for improved readability and maintainability

--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -18,7 +18,7 @@
     "y_i \\isin \\{0, 1\\}\n",
     "$$\n",
     "\n",
-    "De lineaire predicties worden in het interval $[0, 1]$ geprojecteerd door de logistische link functie.\n"
+    "De lineaire predicties worden in het interval $(0, 1)$ geprojecteerd door de logistische link functie.\n"
    ]
   },
   {
@@ -154,7 +154,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Zoals te zien in de illustratie hierboven, zorgt de logistische link-functie ervoor dat de voorspellingen _binnen_ het interval $[0, 1]$ vallen. Om de voorspellingen echt binair te maken $\\{0, 1\\}$ wordt een _decision boundary_ gebruikt - meestal bij het flexiepunt:\n",
+    "Zoals te zien in de illustratie hierboven, zorgt de logistische link-functie ervoor dat de voorspellingen _binnen_ het interval $(0, 1)$ vallen. Om de voorspellingen echt binair te maken $\\{0, 1\\}$ wordt een _decision boundary_ gebruikt - meestal bij het flexiepunt:\n",
     "\n",
     "$$\n",
     "\\hat{y}_i = \\begin{cases}\n",
