--- a/book/math_foundations/nn/backprop.ipynb
+++ b/book/math_foundations/nn/backprop.ipynb
@@ -514,7 +514,7 @@
     "\\frac{\\partial \\mathcal{L}_{SE}}{\\partial w_{2,1}} = \\frac{\\partial \\mathcal{L}_{SE}}{\\partial f}\\frac{\\partial g}{\\partial \\phi}\\frac{\\partial \\phi}{\\partial h}\\frac{\\partial h}{\\partial \\phi_1}\\frac{\\partial \\phi_1}{\\partial h_1}\\frac{\\partial h_1}{\\partial w_{2,1}}\n",
     "$$\n",
     "\n",
-    "waarbij $\\phi_1 = \\phi(z_1)$ de activatie van de eerste hidden neuron is.\n",
+    "waarbij $\\phi_1 = \\phi(z_1)$ de activatie van het eerste hidden neuron is.\n",
     "\n",
     "De eerste drie termen kennen we al uit Stap 2 🎉:\n",
     "\n",
@@ -542,7 +542,7 @@
     "\\frac{\\partial \\mathcal{L}_{SE}}{\\partial w^{(1)}_{2,1}} = (y - \\hat{y})(-1)\\phi(z)(1 - \\phi(z)) \\cdot w_2 \\cdot \\phi(z_1)(1 - \\phi(z_1)) \\cdot x_2\n",
     "$$\n",
     "\n",
-    "Op analoge wijze kunnen we de partiële afgeleiden voor alle andere gewichten in de inputlaag berekenen. Voor bijvoorbeeld $w_{3,2}$ (verbonden met input $x_3$ en de tweede hidden neuron) krijgen we:\n",
+    "Op analoge wijze kunnen we de partiële afgeleiden voor alle andere gewichten in de inputlaag berekenen. Voor bijvoorbeeld $w_{3,2}$ (verbonden met input $x_3$ en het tweede hidden neuron) krijgen we:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\mathcal{L}_{SE}}{\\partial w_{3,2}} = (y - \\hat{y})(-1)\\phi(z)(1 - \\phi(z)) \\cdot w_3 \\cdot \\phi(z_2)(1 - \\phi(z_2)) \\cdot x_3\n",
