--- a/book/ml_principles/basics/experience.ipynb
+++ b/book/ml_principles/basics/experience.ipynb
@@ -31,7 +31,11 @@
                 "Een populaire _geannoteerde_ publieke dataset voor beeldherkenning is de [CIFAR-10](https://www.cs.toronto.edu/~kriz/cifar.html) dataset.\n",
                 "De dataset bestaat uit RGB foto's met een resolutie van 32x32 pixels voor 10 categorieën: 'airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck'.  \n",
                 "De bedoeling is om een ML model te ontwikkelen dat toelaat om, bij een willekeurige nieuwe foto (met resolutie 32x32), te beslissen of het om één van de gegeven _classes_ gaat. Wanneer we hier op zoek gaan naar de ideale parameter waarden van een model, hebben we in de training data voor iedere observatie van 3x32x32 waarden ook de _gewenste_ model output $y_i$ ter beschikking.\n",
-                ":::"
+                ":::\n",
+                "\n",
+                "(target-self-supervised-learning)=\n",
+                "### _Self-supervised learning_\n",
+                "Dit is een variant van _supervised learning_ waarbij de targetwaarde of _ground truth_ in de data zelf vervat zit. Dit is een standaard bij taalmodellen die _next word prediction_ doen. Het model doet een voorspelling voor het volgende woord en die voorspelling kan dan direct vergeleken worden met het effectieve volgende woord in de trainingsdata."
             ]
         },
         {
