--- a/book/ml_principles/basics/tasks.ipynb
+++ b/book/ml_principles/basics/tasks.ipynb
@@ -32,10 +32,17 @@
                 "## Transcriptie\n",
                 "Bij dit type taak moet het model (relatief) **ongestructureerde data vertalen naar een discrete, tekstuele vorm**. Bijvoorbeeld, bij _optical character recognition_ krijgt het computerprogramma een foto met een afbeelding van geschreven of getypte tekst te zien en wordt het gevraagd deze tekst terug te geven in de vorm van een reeks karakters. _Speech-to-text_ behoren ook tot dit type.  \n",
                 "  \n",
-                ":::{note} 🌍\n",
+                ":::{note} 🤗\n",
                 ":icon: false\n",
                 ":class: dropdown\n",
-                "[![Hugging Face Spaces](https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue)](https://huggingface.co/spaces/openai/whisper)\n",
+                "<!-- [![Hugging Face Spaces](https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue)](https://huggingface.co/spaces/openai/whisper) -->\n",
+                "\n",
+                "<iframe\n",
+                "    src=\"https://openai-whisper.hf.space\"\n",
+                "    frameborder=\"0\"\n",
+                "    width=\"850\"\n",
+                "    height=\"450\"\n",
+                "></iframe>\n",
                 ":::\n",
                 "\n",
                 "(target-translation)=\n",
