--- a/book/ml_principles/structured/trees.ipynb
+++ b/book/ml_principles/structured/trees.ipynb
@@ -5,7 +5,7 @@
             "id": "d4f2b581",
             "metadata": {},
             "source": [
-                "# ML voor gestructureerde data\n",
+                "# 𝄜 Gestructureerde data\n",
                 "\n",
                 "In dit onderdeel bekijken we de machine learning concepten in de context van gestructureerde data. Gestructureerde data is data die een gestandaardiseerd formaat heeft dat wordt gedefinieerd door een schema. Deze data wordt doorgaans opgeslagen in een tabelformaat met rijen en kolommen, wat het gemakkelijk maakt om te doorzoeken en te analyseren.\n",
                 "\n",
