--- a/book/ml_principles/vision/imgrec.ipynb
+++ b/book/ml_principles/vision/imgrec.ipynb
@@ -5,19 +5,20 @@
    "id": "inleiding-computer-vision",
    "metadata": {},
    "source": [
-    "# ML voor beeldherkenning\n",
+    "# 🏞️ Beeldherkenning\n",
     "\n",
     "## Computer vision\n",
     "(target-computer-vision)=\n",
     "Computer vision is, naast natural language processing (NLP), een domein binnen machine learning waar alles draait rond neurale netwerkmodellen. **Computer vision richt zich op het automatisch interpreteren en begrijpen van digitale beelden**. Het domein stond in het middelpunt van verschillende grote AI doorbraken. Het onderging in de voorbije decennia een ware transformatie onder impuls van (diepe) _Convolutional Neural Networks (CNN)_ en meest recent, _Vision Transformers_.  \n",
     "  \n",
-    "In tegenstelling tot gestructureerde data waar we werken met tabulaire gegevens, hebben we hier te maken met beelden (RGB, RGB-D, hyper-spectraal, point-cloud) en sequenties daarvan. Het zijn bij uitstek voorbeelden van **ongestructureerde data**.  \n",
+    "In tegenstelling tot gestructureerde data waar we werken met tabulaire gegevens, hebben we hier te maken met beelden (RGB, RGB-D, hyper-spectraal, point-cloud) en sequenties daarvan. Het zijn bij uitstek voorbeelden van {ref}`ongestructureerde data <target-unstructured-data>`.  \n",
     "\n",
     ":::{important} Eigenschappen\n",
-    "- **homogene inputvariabelen**: Meestal een grid van RGB pixels of een sequentie daarvan\n",
+    "- **Ruimtelijke en sequentiële patronen**: De patronen die geleerd moeten worden zijn bepaalde betekenisvolle configuraties in ruimtelijke en soms ook sequentiële zin\n",
+    "- **Homogene inputvariabelen**: Meestal een grid van RGB pixels of een sequentie daarvan\n",
     "- **Complexe, variabele patronen** - zeker in een natuurlijke omgeving.\n",
     "- **Veel trainingsdata nodig**\n",
-    "- **supervised of semi-supervised learning**\n",
+    "- **_Supervised_ of _semi-supervised learning_**\n",
     "- **Vrijwel altijd op basis van neurale netwerk modellen**\n",
     ":::\n",
     "  \n",
