--- a/book/ml_principles/series/nlp.ipynb
+++ b/book/ml_principles/series/nlp.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "#### Encoder\n",
     "(links in de figuur)\n",
-    "- Verwerkt de  volledige input sequentie (bv. een zin in het Frans)\n",
+    "- Verwerkt de volledige input sequentie (bv. een zin in het Frans)\n",
     "- Bestaat uit verschillende identieke lagen (6 in de originele architectuur)\n",
     "- Elke laag bevat _multi-head self-attention_ waarbij tokens naar alle andere tokens in de sequentie kunnen \"kijken\"\n",
     "- _Output_: Een _dense_ contextuele representatie van de _input_\n",
@@ -144,7 +144,7 @@
     "- _Token embeddings_: Ieder token (ID) is gelinkt aan een _dense_ vector in een _embedding_ matrix. Die matrix wordt getraind.\n",
     "- _Positional embeddings_: Een van de voordelen van _Transformers_ is dat de verwerking van tokens in parallel kan gebeuren. In tegenstelling tot architecturen die berusten op recurrente verbindingen of convoluties, moet daarom expliciete informatie over de relatieve positie van een token in de sequentie meegegeven worden. Dit kan ook via getrainde parameters gebeuren[^pos_emb]. \n",
     "\n",
-    "[^pos_emb]: In [](https://doi.org/10.48550/arXiv.1706.03762) werden een vaste sinusoïde encodering gebruikt. \n",
+    "[^pos_emb]: In [](https://doi.org/10.48550/arXiv.1706.03762) werd een vaste sinusoïde-encodering gebruikt. \n",
     "  \n",
     "Voor elke _attention head_ in elke _layer_:\n",
     "- _Query (Q) matrix_: Transformeert _input_ naar _query vector_\n",
@@ -359,6 +359,192 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9c9fc4f",
+   "metadata": {},
+   "source": [
+    ":::{note} 🌍 GPT-2\n",
+    ":icon: false\n",
+    ":class: dropdown\n",
+    "Deze GPT versie heeft nog geen _fine-tuning_ via _RLHF_. We illustreren hieronder de output met verschillende _decoding_ strategieën.  \n",
+    "> Input: What's the weather going to be like in Antwerp tomorrow?  \n",
+    "  \n",
+    "_Decoding strategieën_:\n",
+    "1. _Greedy_: Neemt telkens het token met de hoogste waarschijnlijkheid\n",
+    "2. _Beam_: Houdt meerdere hypotheses bij en kiest daaruit de beste\n",
+    "3. _Sampling met temperatuur_: Introduceert randomness voor meer diverse output\n",
+    "4. _Top-K=50 sampling_: Selecteert random alleen uit top-50 meest waarschijnlijke tokens\n",
+    "5. _Top-P=0.9 sampling_: Selecteert random uit kleinste set tokens waarvan som >= 0.9\n",
+    "6. _N-gram penalty_: Voorkomt dat twee opeenvolgende tokens zich herhalen  \n",
+    "  \n",
+    "Observaties:\n",
+    "- GPT-2 geeft geen directe antwoorden op vragen\n",
+    "- Output lijkt vaak op trainingsdata (Wikipedia, nieuws, etc.)\n",
+    "- Geen begrip van conversatie context  \n",
+    "  \n",
+    "Dit is waarom men instructie fine-tuning en _RLHF_ heeft geïntroduceerd.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1e614225",
+   "metadata": {
+    "tags": [
+     "hide-output",
+     "hide-input"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. GREEDY DECODING: Always choose the token with the highest probability\n",
+      "   What's the weather going to be like in Antwerp tomorrow?\n",
+      "\n",
+      "The weather is going to be very good. The weather is going to be very good. The weather is going to be very good. The weather is going to be very\n",
+      "\n",
+      "\n",
+      "2. BEAM SEARCH (num_beams=5): Keeps track of multiple hypotheses and chooses the best one\n",
+      "   What's the weather going to be like in Antwerp tomorrow?\n",
+      "\n",
+      "The weather is going to be like in Antwerp tomorrow.\n",
+      "\n",
+      "The weather is going to be like in Antwerp tomorrow.\n",
+      "\n",
+      "The weather is going\n",
+      "\n",
+      "\n",
+      "3. SAMPLING (temperature=0.7): Introduces randomness for more diverse output\n",
+      "   What's the weather going to be like in Antwerp tomorrow? We'll have a chance to see how the wind gets to us tomorrow.\"\n",
+      "\n",
+      "It was a sunny day for the French capital, with temperatures dipping above freezing, and the air\n",
+      "\n",
+      "\n",
+      "4. TOP-K SAMPLING (k=50): Sample only from top-50 most likely tokens\n",
+      "   What's the weather going to be like in Antwerp tomorrow? Why did you get it here?\"\n",
+      "\n",
+      "Fry is a Belgian-born musician who has appeared on The X Factor and The Real Housewives of Beverly Hills. He has written\n",
+      "\n",
+      "\n",
+      "5. TOP-P SAMPLING (p=0.9): Sample from the smallest set of tokens whose cumulative probability >= 90%\n",
+      "   What's the weather going to be like in Antwerp tomorrow? (photo: @KathrynWG)\n",
+      "\n",
+      "A couple of days ago, the state legislature voted to change how the government is governed. The new rules would have put\n",
+      "\n",
+      "\n",
+      "6. BEAM SEARCH + NO_REPEAT_NGRAM (size=2): Prevents repetition of 2-grams\n",
+      "   What's the weather going to be like in Antwerp tomorrow?\n",
+      "\n",
+      "The weather will be a bit different tomorrow than it was yesterday. We'll have to wait and see how it goes tomorrow, but we'll be able to get a good\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "prompt = \"What's the weather going to be like in Antwerp tomorrow?\"\n",
+    "\n",
+    "model_name = \"gpt2\"\n",
+    "max_length = 50\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "model.eval()\n",
+    "\n",
+    "# Tokenize the input\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
+    "\n",
+    "# 1. GREEDY DECODING\n",
+    "print(\"\\n1. GREEDY DECODING: Always choose the token with the highest probability\")\n",
+    "with torch.no_grad():\n",
+    "    greedy_output = model.generate(\n",
+    "        **inputs, max_length=max_length, do_sample=False, pad_token_id=tokenizer.eos_token_id\n",
+    "    )\n",
+    "greedy_text = tokenizer.decode(greedy_output[0], skip_special_tokens=True)\n",
+    "print(f\"   {greedy_text}\")\n",
+    "\n",
+    "# 2. BEAM SEARCH\n",
+    "print(\n",
+    "    \"\\n\\n2. BEAM SEARCH (num_beams=5): Keeps track of multiple hypotheses and chooses the best one\"\n",
+    ")\n",
+    "with torch.no_grad():\n",
+    "    beam_output = model.generate(\n",
+    "        **inputs,\n",
+    "        max_length=max_length,\n",
+    "        num_beams=5,\n",
+    "        do_sample=False,\n",
+    "        pad_token_id=tokenizer.eos_token_id,\n",
+    "    )\n",
+    "beam_text = tokenizer.decode(beam_output[0], skip_special_tokens=True)\n",
+    "print(f\"   {beam_text}\")\n",
+    "\n",
+    "# 3. SAMPLING met Temperature\n",
+    "print(\"\\n\\n3. SAMPLING (temperature=0.7): Introduces randomness for more diverse output\")\n",
+    "torch.manual_seed(42)\n",
+    "with torch.no_grad():\n",
+    "    sample_output = model.generate(\n",
+    "        **inputs,\n",
+    "        max_length=max_length,\n",
+    "        do_sample=True,\n",
+    "        temperature=0.7,\n",
+    "        pad_token_id=tokenizer.eos_token_id,\n",
+    "    )\n",
+    "sample_text = tokenizer.decode(sample_output[0], skip_special_tokens=True)\n",
+    "print(f\"   {sample_text}\")\n",
+    "\n",
+    "# 4. TOP-K SAMPLING\n",
+    "print(\"\\n\\n4. TOP-K SAMPLING (k=50): Sample only from top-50 most likely tokens\")\n",
+    "torch.manual_seed(123)\n",
+    "with torch.no_grad():\n",
+    "    topk_output = model.generate(\n",
+    "        **inputs,\n",
+    "        max_length=max_length,\n",
+    "        do_sample=True,\n",
+    "        top_k=50,\n",
+    "        pad_token_id=tokenizer.eos_token_id,\n",
+    "    )\n",
+    "topk_text = tokenizer.decode(topk_output[0], skip_special_tokens=True)\n",
+    "print(f\"   {topk_text}\")\n",
+    "\n",
+    "# 5. TOP-P (NUCLEUS) SAMPLING\n",
+    "print(\n",
+    "    \"\\n\\n5. TOP-P SAMPLING (p=0.9): Sample from the smallest set of tokens whose cumulative probability >= 90%\"\n",
+    ")\n",
+    "torch.manual_seed(456)\n",
+    "with torch.no_grad():\n",
+    "    topp_output = model.generate(\n",
+    "        **inputs,\n",
+    "        max_length=max_length,\n",
+    "        do_sample=True,\n",
+    "        top_p=0.9,\n",
+    "        pad_token_id=tokenizer.eos_token_id,\n",
+    "    )\n",
+    "topp_text = tokenizer.decode(topp_output[0], skip_special_tokens=True)\n",
+    "print(f\"   {topp_text}\")\n",
+    "\n",
+    "# 6. N-GRAM PENALTY\n",
+    "print(\"\\n\\n6. BEAM SEARCH + NO_REPEAT_NGRAM (size=2): Prevents repetition of 2-grams\")\n",
+    "with torch.no_grad():\n",
+    "    ngram_output = model.generate(\n",
+    "        **inputs,\n",
+    "        max_length=max_length,\n",
+    "        num_beams=5,\n",
+    "        no_repeat_ngram_size=2,\n",
+    "        do_sample=False,\n",
+    "        pad_token_id=tokenizer.eos_token_id,\n",
+    "    )\n",
+    "ngram_text = tokenizer.decode(ngram_output[0], skip_special_tokens=True)\n",
+    "print(f\"   {ngram_text}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94b7ded6",
    "metadata": {},
    "source": [
@@ -420,8 +606,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ml-courses",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
