--- a/book/ml_principles/vision/imgrec.ipynb
+++ b/book/ml_principles/vision/imgrec.ipynb
@@ -18,8 +18,8 @@
     "- **Homogene inputvariabelen**: Meestal een grid van RGB pixels of een sequentie daarvan\n",
     "- **Complexe, variabele patronen** - zeker in een natuurlijke omgeving.\n",
     "- **Veel trainingsdata nodig**\n",
+    "- **Vrijwel altijd op basis van convolutionele of _Transformer_ neurale netwerken**\n",
     "- **_Supervised_ of _semi-supervised learning_**\n",
-    "- **Vrijwel altijd op basis van neurale netwerk modellen**\n",
     ":::\n",
     "  \n",
     "Alles draait om de **automatische extractie van visuele patronen**. Daar waar dit lang gebeurde op basis van deterministische filters, brachten CNNs de mogelijkheid om die filters rechtstreeks uit de data te leren wat een enorme sprong in performantie en flexibiliteit met zich meebracht. \n",
